<resources>
    <string name="app_name">Мобильное рабочее место врача</string>
    <string name="app_description">Мобильное рабочее место врача ГП №112 СПб</string>
    <string name="set_preferences">Выставить настройки</string>
    <string name="preference_hospital">ГП №112 СПб</string>
    <string name="section_my_calls">Мои вызовы</string>
    <string name="section_emk">Поиск ЭМК</string>
    <string name="section_documentation">Документация</string>
    <string name="section_rls">Справочник РЛС</string>
    <string name="section_health_care">Оказание медпомощи</string>
    <string name="section_arrange_to_visit">Запись на прием</string>
    <string name="section_reanimation">Реанимация</string>
    <string name="section_danger">Опасность</string>
    <string name="section_pharmacies">ЛПУ и аптеки города</string>
    <string name="home_open_menu">Открыть меню</string>
    <string name="home_close_menu">Закрыть меню</string>
    <string name="my_calls_all_calls_title">Все вызовы</string>
    <string name="my_calls_new_calls_title">Новые</string>
    <string name="my_calls_old_calls_title">Обработанные</string>
    <string name="calls_list_status_title">Статус</string>
    <string name="calls_list_time_title">Время</string>
    <string name="calls_list_patient_title">Пациент</string>
    <string name="calls_list_address_title">Адрес</string>
    <string name="calls_list_complaints_title">Жалобы</string>
    <string name="day_of_week_today">Сегодня</string>
    <string name="phone">Телефон:</string>
    <string name="mobile_phone">Моб. телефон:</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_main_outpatient_talon">Амбулаторный талон</string>
    <string name="title_main_result_request">Результат обращения</string>
    <string name="title_main_diagnosis">Диагноз</string>
    <string name="current_value_date">current_value_date</string>
    <string name="title_service_setting">Сетевые настройки</string>
    <string name="title_service_setting_address">Адрес для подключения</string>
    <string name="address_connection">address_connection</string>
    <string name="summary_service_setting_address">Необходимо вводить вместе с портом</string>
    <string name="title_update_guides">Настройка справочников</string>
    <string name="title_update_guides_button">Обновить справочники</string>
    <string name="update_guides_button">update_guides</string>
    <string name="update_guides_button_help">С помощью данной кнопки, вы можете получить актуальную версию справочников</string>
    <string name="title_my_calls">Настройка моих вызовов</string>
    <string name="title_my_calls_enable_update">Автоматическое обновление моих вызовов</string>
    <string name="switch_state">switch_state</string>
    <string name="title_my_calls_settings">Частота обновления моих вызовов</string>
    <string name="update_my_calls_timeout">Укажите частоту обновления моих вызовов в минутах</string>
    <string name="timeout_for_update_guides">timeout_for_update_guides</string>
    <string name="title_param_enter">Настройка параметров входа</string>
    <string name="title_switch_state_login">Разрешить вход только по паролю</string>
    <string name="switch_state_login">switch_state_login</string>
    <string name="problem_to_connect_service_download">Проблема с подключением к сервису загрузки</string>
    <string name="need_correct_date">Необходима правильно указать дату</string>
    <string name="today_top_my_calls">"Сегодня, "</string>
    <string name="error_while_download_data">Произошла ошибка при загрузку данных</string>
    <string name="type_visit">Тип визита</string>
    <string name="service_place">Место обслуживания</string>
    <string name="source_visit">Цель посещения</string>
    <string name="category_pacient">Категория пациента</string>
    <string name="pragnacy">Беременность</string>
    <string name="loading_not_ready">Загрузка ещё не закончилась</string>
    <string name="old_data_base">Ваша база данных устарела. Работа приложения не возможна. Обновить базу данных?</string>
    <string name="update_data_base">Обновление базы данных</string>
    <string name="protocol_was_save">Протоколы успешно сохранены</string>
    <string name="save_info_about_visit">Информация по визиту успешно сохранена</string>
    <string name="succesfull_deleted_diagnoses">Диагноз успешно удален</string>
    <string name="save_button">Сохранить</string>
    <string name="sending_service_unavailable">Сревис отправки временно не доступен</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="work_unvailable">Работа с текущей версией базы данных не доступна</string>
    <string name="open_date">Дата открытия</string>
    <string name="choose_date">Выбрать дату</string>
    <string name="open_doctor">Открывший врач</string>
    <string name="choose_doctor">Выбрать врача</string>
    <string name="code_mes">Код МЭС</string>
    <string name="choose_mes">Выбрать МЭС</string>
    <string name="name_of_mes">Название МЭС</string>
    <string name="date_close">Дата закрытия</string>
    <string name="closed_doctor">Закрывший врач</string>
    <string name="type_of_closed">Тип закрытия</string>
    <string name="choose_type_closed">Выбрать тип закрытия</string>
    <string name="comments">Комментарий</string>
    <string name="code_doctor_on_dep">Код доктора</string>
    <string name="fio_doctor">Фио врача</string>
    <string name="name_of_speciality">Название специальности</string>
    <string name="name_of_category">Название категории</string>
    <string name="dep_of_name">Название отделения</string>
    <string name="note">Комментарий</string>
    <string name="mes_was_save">МЭС успешно сохранен</string>
    <string name="title_mes">МЭС</string>
    <string name="information_about_app">Информация о приложении</string>
    <string name="information_about_version">Текущая версия приложения</string>
    <string name="not_enable_mes">Для данного диагноза нет доступных МЭС</string>
    <string name="choose_mes_for_diagnoses">Выбор МЭС для диагноза</string>
    <string name="choose_doctor_for_dialog">Выбор врача</string>
    <string name="cases">Случай</string>
    <string name="outcome">Исход</string>
    <string name="completeness">Законченность</string>
    <string name="result_of_health_care">Результат лечения</string>
    <string name="error_saving">Ошибка сохранения</string>
    <string name="name_of_users">Имя пользователя</string>
    <string name="open_maps">Открыть карту</string>
    <string name="error_update_info">Произошла ошибка обновления</string>
    <string name="error_set_address_update">Неверно задан адрес обновления</string>
    <string name="update_data">Обновление данных</string>
    <string name="sorry_service_unavailable">Извините сервис обновлений временно не доступен</string>
    <string name="protocol_delete_successfuly">Протокол успешно удален</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="number_card">№ Карты</string>
    <string name="date_born">Дата рождения</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="thirdName">Отчество</string>
    <string name="police_serial">Полис: сер.</string>
    <string name="find">Поиск</string>
    <string name="choose_type_note">Выберите тип записи</string>
    <string name="current_doctor">На текущего врача</string>
    <string name="another_doctor">На другого врача</string>
    <string name="service_found_not_ready">Сервис поиска ещё не готов. Попробуйте проще</string>
    <string name="service_booking_not_ready">Сервис записи ещё не готов. Попробуйте проще</string>
    <string name="number_of_card">Номер карты</string>
    <string name="fio">ФИО</string>
    <string name="date_was_born">Дата рождения</string>
    <string name="number_phone_for_user">Номер телефона</string>
    <string name="address">Адрес</string>
    <string name="time_for_visit">Время приема</string>
    <string name="special_of_doctor">Специальность</string>
    <string name="doctor_not_selected">Доктор не выбран</string>
    <string name="special_not_selected">Специальность не выбрана</string>
    <string name="pacient_not_selected">Пациент не выбран</string>
    <string name="clarify__specialty">Уточните специальность врача</string>
    <string name="not_found_schedule">Нет расписания на заданную дату</string>
    <string name="time_visit">Время приема</string>
    <string name="element_not_loaded">Элемент не загружен</string>
    <string name="status_number">Статус номерка</string>
    <string name="enable_numb">Доступен</string>
    <string name="disable_numb">Не доступен</string>
    <string name="pacient_save_successful">Пациент успешно записан</string>
    <string name="number_free_successfuly">Номерок успешно освобожден</string>
    <string name="pacient_book_on_this_time">Пациент записан на это время</string>
    <string name="enable_documents">Доступные для просмотра документы</string>
    <string name="book_pacient">Запись пациента</string>
    <string name="free_numb_pacient">Освобождение номерка</string>
    <string name="confirm_book_on">"Вы действительно хотите записать пациента на: "</string>
    <string name="free_booking_numb">"Вы действительно хотите освободить номерок на: "</string>
    <string name="setting_found_clients">Настройка поиска пациентов</string>
    <string name="max_value_for_view_clients">Максимальное количество пользователей для отображения</string>
    <string name="max_value_for_view_pacient">Укажите максимальное число пациентов для отображения</string>
    <string name="max_value_for_view_users">max_value_for_view_users</string>
    <string name="overdraft_limit">Результат превышает установленный лимит записей</string>
    <string name="update_files_correct_loaded">Загружен актуальный список файлов</string>
    <string name="result_is_empty">По вашему запросу, ничего не найдено</string>
    <string name="not_found_history">У пациента отсутсвует история</string>
    <string name="title_send_message_attention">Отправка сообщения об опасности</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="message_about_attention_send">Сообщение об опасности отправлено</string>
    <string name="title_of_found_preparat">Поиск лекарственных средств</string>
    <string name="text_view_product_name">Торговое наименование</string>
    <string name="text_view_name_of_active_component">Название действующего вещества</string>
    <string name="text_view_name_of_group_component">Название группы препаратов</string>
    <string name="latname_of_product">Латинское название препарата:</string>
    <string name="active_object">Активное вещество:</string>
    <string name="title_form_exite">Форма выпуска:</string>
    <string name="title_dosage_exite">Дозировка:</string>
    <string name="title_manufacture_exite">Производитель:</string>
    <string name="title_country_exite">Страна производства:</string>
    <string name="information_about_product">Информация о препарате</string>
    <string name="tvTitleIdentifikatorNomenklaturnojPoziciiRls">Идентификатор номенклатурной позиции РЛС:</string>
    <string name="main_name_of_product">Название препарата:</string>
</resources>