<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/code_doctor_on_dep"
        android:paddingLeft="5dp"
        android:id="@+id/text_View_code_doctor_on_dep"
        android:layout_weight="0.75"
        android:textSize="@dimen/size_of_text_item_patient" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fio_doctor"
        android:paddingLeft="@dimen/padding_save_button"
        android:id="@+id/text_View_fio_doctor"
        android:layout_weight="0.50"
        android:textSize="@dimen/size_of_text_item_patient" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/special_of_doctor"
        android:id="@+id/text_View_special_doctor"
        android:layout_weight="0.50"
        android:paddingLeft="@dimen/padding_save_button"
        android:textSize="@dimen/size_of_text_item_patient" />

</LinearLayout>